// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricNumber > matches snapshot in dark mode 1`] = `
<div>
  <span
    class="MuiBox-root css-xngvfy"
  >
    <span
      class="MuiBox-root css-ulojab"
    >
      1280
    </span>
    <span
      class="MuiBox-root css-1ger27q"
    >
      ops
    </span>
  </span>
</div>
`;

exports[`MetricNumber > matches snapshot in light mode 1`] = `
<div>
  <span
    class="MuiBox-root css-p0vs3k"
  >
    <span
      class="MuiBox-root css-ulojab"
    >
      1280
    </span>
    <span
      class="MuiBox-root css-j57cnw"
    >
      ops
    </span>
  </span>
</div>
`;
